--- a/doc/poster/poster.tex
+++ b/doc/poster/poster.tex
@@ -60,7 +60,7 @@
 
 
 
-\title{\huge Titel}
+\title{\huge DICOM StereoViewer}
 
 \author{Rafael Hoock}
 
@@ -73,74 +73,6 @@
 
 \begin{frame}[t] % The whole poster is enclosed in one beamer frame
 
-\begin{columns}[t] % The whole poster consists of two major columns, each of which can be subdivided further with another \begin{columns} block - the [t] argument aligns each column's content to the top
-
-\begin{column}{.025\textwidth}\end{column} % Empty spacer column
-
-\begin{column}{.465\textwidth} % The first column
-
-
-\begin{block}{Radiologie/CT/DICOM}
-    %\vspace{140px}
-    %\begin{figure}
-    %	\center
-        %\includegraphics[width=0.475\linewidth]{lemniskate_gerono}\hspace*{0.25cm}
-        %\includegraphics[width=0.475\linewidth]{helix}
-        %\caption{Visualisierung eines Raytracing-Vorgangs \cite{Suffern}}
-    %\end{figure}
-    
-    %\vspace{120px}
-
-%	\begin{itemize}
-		%\item Darstellung von Parameterkurven
-	 	%\item Standardthema in Vorlesungen der computergestützten Mathematik 
-	 	%\item \textbf{Problem:} \\ Raumkurven schwer für Lernende verständlich darstellbar
-	 	%\item \textbf{Idee:} \\ Visualisieren der Raumkurven in einer Virtual Reality Umgebung
-	%\end{itemize}
-
-%\vspace{1cm}
-
-\end{block}
-
-\vspace{0.125cm}
-
-\end{column}
-
-% -------
-
-\begin{column}{.025\textwidth}\end{column} % Empty spacer column
-
-\begin{column}{0.465\textwidth}
-
-\begin{block}{Technologien}
-   \begin{figure}
-       \includegraphics[width=0.6\textwidth]{pluraviewTechnologie}
-       \includegraphics[width=0.3735\textwidth]{spacenagivator\_dof}
-   	 % \includegraphics[height=14.25cm]{hmd}\hspace*{0.25cm}
-       %\includegraphics[height=14.25cm]{dxrWorkspace}
-   	 % \includegraphics[height=14.25cm]{hmdSmall}
-   	%\includegraphics[height=14.25cm]{caveSlim}
-   \end{figure}
-   
-%   \begin{itemize}
-%   \item Unter dem Sammelbegriff \textbf{Cross-Reality (XR)} werden Techniken der digitalen Konstruktion und Unterst\"utzung von Realit\"aten zusammengefasst.
-%   \item Applikationen dieser Art finden vermehrt Einsatz in Industrie, Unterhaltung und Lehre.
-%   \item Im \textbf{Virtual und Augmented Reality Lab} der Hochschule Kaiserslautern werden Prototypen konzeptioniert und entwickelt, um die Lehre an der Hochschule besser unterst\"utzen zu k\"onnen.
-%   \end{itemize}
-   
-     
-   
-   
-\end{block}
-
-
-\end{column} % End of the second column
-
-
-
-\begin{column}{.025\textwidth}\end{column} % Empty spacer column
-
-\end{columns} % End of all the columns in the poster
 
 
 %\vspace{0.125cm}
@@ -212,6 +144,78 @@
 \end{columns} % End of all the columns in the poster
 
 
+\begin{columns}[t] % The whole poster consists of two major columns, each of which can be subdivided further with another \begin{columns} block - the [t] argument aligns each column's content to the top
+
+\begin{column}{.025\textwidth}\end{column} % Empty spacer column
+
+\begin{column}{.465\textwidth} % The first column
+
+\begin{block}{Technologien}
+   \begin{figure}
+       \includegraphics[width=0.6\textwidth]{pluraviewTechnologie}
+       \includegraphics[width=0.3735\textwidth]{spacenagivator\_dof}
+   	 % \includegraphics[height=14.25cm]{hmd}\hspace*{0.25cm}
+       %\includegraphics[height=14.25cm]{dxrWorkspace}
+   	 % \includegraphics[height=14.25cm]{hmdSmall}
+   	%\includegraphics[height=14.25cm]{caveSlim}
+   \end{figure}
+   
+%   \begin{itemize}
+%   \item Unter dem Sammelbegriff \textbf{Cross-Reality (XR)} werden Techniken der digitalen Konstruktion und Unterst\"utzung von Realit\"aten zusammengefasst.
+%   \item Applikationen dieser Art finden vermehrt Einsatz in Industrie, Unterhaltung und Lehre.
+%   \item Im \textbf{Virtual und Augmented Reality Lab} der Hochschule Kaiserslautern werden Prototypen konzeptioniert und entwickelt, um die Lehre an der Hochschule besser unterst\"utzen zu k\"onnen.
+%   \end{itemize}
+   
+     
+   
+   
+\end{block}
+
+
+\vspace{0.125cm}
+
+\end{column}
+
+% -------
+
+\begin{column}{.025\textwidth}\end{column} % Empty spacer column
+
+\begin{column}{0.465\textwidth}
+
+\begin{block}{PluraView + Polfilterbrille}
+   \begin{figure}
+       \includegraphics[width=.7\textwidth]{pluraviewBrille}
+   \end{figure}
+    %\vspace{140px}
+    %\begin{figure}
+    %	\center
+        %\includegraphics[width=0.475\linewidth]{lemniskate_gerono}\hspace*{0.25cm}
+        %\includegraphics[width=0.475\linewidth]{helix}
+        %\caption{Visualisierung eines Raytracing-Vorgangs \cite{Suffern}}
+    %\end{figure}
+    
+    %\vspace{120px}
+
+%	\begin{itemize}
+		%\item Darstellung von Parameterkurven
+	 	%\item Standardthema in Vorlesungen der computergestützten Mathematik 
+	 	%\item \textbf{Problem:} \\ Raumkurven schwer für Lernende verständlich darstellbar
+	 	%\item \textbf{Idee:} \\ Visualisieren der Raumkurven in einer Virtual Reality Umgebung
+	%\end{itemize}
+
+%\vspace{1cm}
+
+\end{block}
+
+
+
+\end{column} % End of the second column
+
+
+
+\begin{column}{.025\textwidth}\end{column} % Empty spacer column
+
+\end{columns} % End of all the columns in the poster
 
 \begin{columns}[t] % The whole poster consists of two major columns, each of which can be subdivided further with another \begin{columns} block - the [t] argument aligns each column's content to the top
 
@@ -220,11 +224,11 @@
 \begin{column}{.465\textwidth} % The first column
 
 
-\begin{block}{Unity Anwendung}
+\begin{block}{Kopf + Transferfunktion}
 %    %\vspace{140px}
     \begin{figure}
     	\center
-        \includegraphics[width=0.75\textwidth]{unityAnwendung}
+        \includegraphics[width=0.75\textwidth]{KopfTransferfunktion}
 %        \includegraphics[width=0.5\textwidth]{airplanes}
         
 %        %\hspace*{0.25cm}
@@ -243,31 +247,18 @@
 
 \begin{column}{.465\textwidth}
 
-\begin{block}{Schnittebenen}
 
-   \begin{figure}
-       %\includegraphics[width=0.95\linewidth]{dxrWorkspace} %\textwidth]{dxrWorkspace}
-       \includegraphics[width=0.325\textwidth]{slide01}
-       \vspace{10px}
-       \includegraphics[width=0.325\textwidth]{slide02}
-       \vspace{10px}
-       \includegraphics[width=0.325\textwidth]{slide03}
-%       %\includegraphics[height=13.5cm]{hmd}
-%   	  %\includegraphics[height=13.5cm]{CAVE_Crayoland}
-   \end{figure}
-%   
-%   \vspace{10px}
-%   
-%   Weitere Informationen und Operationen sind in der Szene an den Wänden des Raumes positioniert. Jede Wand nimmt einen Kontext an, mit dem der Benutzer interagieren kann.
-%   
-%   
-%   \vspace{10px}
-%   
-   \begin{itemize}
-   \item Text01
-   \item Text02
-   \item Text03
-   \end{itemize}
+\begin{block}{Unterschenkel + Transferfunktion}
+  
+    \begin{figure}
+    	\center
+        \includegraphics[width=0.75\textwidth]{KnieTransferfunktion}
+%        \includegraphics[width=0.5\textwidth]{airplanes}
+        
+%        %\hspace*{0.25cm}
+%        %\includegraphics[width=0.45\textwidth]{vorgang}
+%        %\caption{Visualisierung eines Raytracing-Vorgangs \cite{Suffern}}
+    \end{figure}
    
      
    
@@ -312,12 +303,29 @@
 
 \begin{column}{.465\textwidth}
 
-\begin{block}{Block}
-  
+\begin{block}{Schnittebenen}
+
+   \begin{figure}
+       %\includegraphics[width=0.95\linewidth]{dxrWorkspace} %\textwidth]{dxrWorkspace}
+       \includegraphics[width=0.325\textwidth]{slide01}
+       \vspace{10px}
+       \includegraphics[width=0.325\textwidth]{slide02}
+       \vspace{10px}
+       \includegraphics[width=0.325\textwidth]{slide03}
+%       %\includegraphics[height=13.5cm]{hmd}
+%   	  %\includegraphics[height=13.5cm]{CAVE_Crayoland}
+   \end{figure}
+%   
+%   \vspace{10px}
+%   
+%   Weitere Informationen und Operationen sind in der Szene an den Wänden des Raumes positioniert. Jede Wand nimmt einen Kontext an, mit dem der Benutzer interagieren kann.
+%   
+%   
+%   \vspace{10px}
+%   
    \begin{itemize}
-   \item Text01
-   \item Text02
-   \item Text03
+   \item bis zu acht Schnittebenen
+   \item frei im Raum plazierbar
    \end{itemize}
    
      
@@ -353,16 +361,22 @@
 \begin{column}{.465\textwidth}
 
 \begin{block}{Literatur}
-
-\begin{itemize}
-
-\item Ref01
-\item Ref02
-
-\end{itemize}
-
-
+  \bibliographystyle{geralpha}
+  \nocite{pries:19}
+ \bibliography{sample}
 \end{block}
+
+% \begin{block}{Literatur}
+
+% \begin{itemize}
+
+% \item Ref01
+% \item Ref02
+
+% \end{itemize}
+
+
+% \end{block}
 
 \end{column}
 
