--- a/doc/poster/sample.bib
+++ b/doc/poster/sample.bib
@@ -1,16 +1,16 @@
-@book{Suffern,
-	title        = {Ray Tracing from the Ground Up},
-	author       = {Kevin Suffern},
-	year         = 2007,
-	publisher    = {A K Peters}
+@MastersThesis{Hoock2023,
+  author   = {Rafael Hoock},
+  school   = {Hochschule Kaiserslautern},
+  title    = {{3D} {V}isualisierungs- und {I}nteraktionsmethoden für einen virtuellen radiologischen {A}rbeitsplatz},
+  year     = {2023},
+  type     = {Bachelorarbeit},
+  keywords = {Abschlussarbeit, Fachbereich Informatik und Mikrosystemtechnik, Medizin, Computergrafik, Volumengrafik},
 }
-@misc{VisRaytrace01,
-	author	= {Benedict Särota},
-	title	= {VisualRayTrace: Visualisierung der Funktion eines RayTracers in Virtual Reality},
-	year = 2020
-}
-@misc{VisRaytrace02,
-	author	= {Benedict Särota},
-	title	= {Erweiterung einer VR-Anwendung zur Visualisierung eines Raytracing-Prozess},
-	year = 2021
+
+@Electronic{Lavik2023,
+  author  = {Matias Lavik},
+  note    = {zuletzt aufgerufen am: 25.02.2023},
+  title   = {{U}nity{V}olume{R}endering},
+  url     = {https://github.com/mlavik1/UnityVolumeRendering},
+  year    = {2023},
 }
