--- a/doc/poster/sample.bib
+++ b/doc/poster/sample.bib
@@ -7,10 +7,13 @@
   keywords = {Abschlussarbeit, Fachbereich Informatik und Mikrosystemtechnik, Medizin, Computergrafik, Volumengrafik},
 }
 
-@Electronic{Lavik2023,
+
+@webpage{Lavik2023,
   author  = {Matias Lavik},
-  note    = {zuletzt aufgerufen am: 25.02.2023},
   title   = {{U}nity{V}olume{R}endering},
   url     = {https://github.com/mlavik1/UnityVolumeRendering},
-  year    = {2023},
+  lastchecked = {2023-02-25},
 }
+
+
+@Comment{jabref-meta: databaseType:biblatex;}
