Change image sizes

--- a/doc/poster/poster.tex
+++ b/doc/poster/poster.tex
@@ -233,7 +233,7 @@
 %    %\vspace{140px}
     \begin{figure}
     	\center
-        \includegraphics[width=0.7\textwidth]{KopfTransferfunktion}
+        \includegraphics[width=0.8\textwidth]{KopfTransferfunktion}
 %        \includegraphics[width=0.5\textwidth]{airplanes}
         
 %        %\hspace*{0.25cm}
@@ -257,7 +257,7 @@
   
     \begin{figure}
     	\center
-        \includegraphics[width=0.7\textwidth]{KnieTransferfunktion}
+        \includegraphics[width=0.8\textwidth]{KnieTransferfunktion}
 %        \includegraphics[width=0.5\textwidth]{airplanes}
         
 %        %\hspace*{0.25cm}
@@ -358,19 +358,19 @@
 
 \begin{block}{Kontakt}
 \begin{columns}[t]
-\begin{column}{.4\textwidth}
+\begin{column}{.35\textwidth}
 \begin{figure}[h]
-% \vspace*{-1.0cm}
+\vspace*{-1.0cm}
 \centering
 \includegraphics[width=.9\textwidth]{qrcode}
-\vspace*{9mm}
+% \vspace*{9mm}
 \end{figure}
 \end{column}
 
 
 
 \begin{column}{.6\textwidth}
-\vspace*{3.0cm}
+\vspace*{1.5cm}
 \begin{itemize}[leftmargin=0pt]
     \item[] \Letter\ \href{rafaelhoock@gmail.com}{rafaelhoock@gmail.com}
     \item[] \Letter\ \href{manfred.brill@hs-kl.de}{manfred.brill@hs-kl.de}
@@ -388,8 +388,10 @@
 \begin{column}{.465\textwidth}
 \nocite{*} % Alles zitieren in sample.bib
 \begin{block}{Literatur}
+\small
  \bibliographystyle{eg-alpha-doi}
  \bibliography{sample}
+ \vspace*{6mm}
 \end{block}
 
 % \begin{block}{Literatur}
